# chat-server-rust

./: Cargo.toml  README.md
slack-exp/: go.mod  main.go
src/: foo.rs
src/client/: client.rs  commands.rs  frontend.rs  mod.rs
src/server/: backend.rs  chat_room.rs  mod.rs  server.rs
src/server/communication/: client.rs  handler.rs  mod.rs  server.rs
