[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[lib]
name = "chat_server"
path = "src/lib.rs"

[dependencies]
tokio-tungstenite = "0.20.0"
tokio = { version = "1.32.0", features = ["full"] }
futures-util = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
futures-channel = "0.3.29"
clap = { version = "4.4.11", features = ["derive"] }
crossterm = "0.27.0"

[workspace]
